# zip-join-dir-extract

./: README.md  stack.yaml  zip-join-dir-extract.cabal
app/: Main.hs
src/: Lib.hs
