name:                zip-join-dir-extract
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cobodo/zip-join-dir-extract
license:             BSD3
license-file:        LICENSE
author:              cobodo
maintainer:          cobodo@gmail.com
copyright:           2017 cobodo
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , exceptions
                     , path
  default-language:    Haskell2010

executable zip-join-dir-extract
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , zip-join-dir-extract
                     , mtl
                     , exceptions
                     , bytestring
                     , resourcet
                     , conduit
                     , conduit-combinators
                     , zip-stream
                     , path
                     , directory
                     , text
                     , text-icu
                     , utf8-string
  default-language:    Haskell2010

test-suite zip-join-dir-extract-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , zip-join-dir-extract
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cobodo/zip-join-dir-extract
